DRAFT: All markuo infoForParticulars page * Need set paddings and font bolds * Need fix collapse styles

--- a/css/infoForParticulars.scss
+++ b/css/infoForParticulars.scss
@@ -5,7 +5,8 @@
   display: grid;
 
   .th {
-    height: 136px;
+    padding: 0 24px;
+
     background: var(--cobalt-100);
     font: 400 24px Forum;
     color: var(--cobalt-10);
@@ -21,13 +22,15 @@
     grid-template: inherit;
     grid-column: 1 / grid-end;
 
+    background: var(--cobalt-10);
+
     height: fit-content;
   }
 
   .td {
+    padding: 0 24px;
+
     min-height: 78px;
-    max-height: 150px;
-    background: var(--cobalt-10);
     font: 300 16px 'Museo Sans';
     color: var(--graphite-100);
 
@@ -40,12 +43,63 @@
       display: grid;
       grid-template-columns: 50% 50%;
     }
-  }
-}
 
-.main-table-speciality {
-  @extend .main-table;
-  grid-template-columns:
+    &--left {
+      justify-content: flex-start;
+      text-align: left;
+    }
+
+    &--no-padding {
+      padding: 0;
+    }
+
+    &--gap-1 {
+      gap: 5px;
+    }
+  }
+
+  /*
+  Кастомные размеры столбцов
+  ft - infoForOarticulars
+  */
+  &--ft-finally-accept-company {
+    grid-template-columns:
+          minmax(230px, 1fr)
+          minmax(200px, 1fr)
+          minmax(173px, 1fr)
+          minmax(189px, 1fr)
+          minmax(180px, 1fr)
+          minmax(180px, 1fr)
+          minmax(180px, 1fr)
+  [grid-end];
+  }
+
+  &--speciality-ft-education {
+    grid-template-columns:
+          minmax(230px, 1fr)
+          minmax(200px, 1fr)
+          minmax(173px, 1fr)
+          minmax(189px, 1fr)
+          minmax(180px, 1fr)
+          minmax(200px, 1fr)
+          minmax(250px, 1fr)
+          minmax(180px, 1fr)
+  [grid-end];
+  }
+
+  &--ifp-services {
+    grid-template-columns:
+          minmax(539px, 1fr)
+          minmax(539px, 1fr)
+          [grid-end];
+
+    .th {
+      height: 58px;
+    }
+  }
+
+  &-speciality {
+    grid-template-columns:
           minmax(230px, 1fr)
           minmax(200px, 1fr)
           minmax(173px, 1fr)
@@ -54,23 +108,27 @@
           minmax(350px, 1fr)
           minmax(400px, 1fr)
   [grid-end];
+
+    .th {
+      height: 136px;
+    }
+  }
+
+  /*Раскрашенные строки таблицы*/
+
+  &--colored {
+    .tr:nth-child(odd) {
+      background: var(--cobalt-10);
+    }
+
+    .tr:nth-child(even) {
+      background: var(--cobalt-30);
+    }
+  }
 }
 
 .width_87_percent {
   width: 87%;
-}
-
-.main-table-speciality {
-  @extend .main-table;
-  grid-template-columns:
-          minmax(230px, 1fr)
-          minmax(200px, 1fr)
-          minmax(173px, 1fr)
-          minmax(189px, 1fr)
-          minmax(180px, 1fr)
-          minmax(350px, 1fr)
-          minmax(185px, 1fr)
-  [grid-end];
 }
 
 // TODO: [Кровель] Временный класс, после общей готовности верстки
@@ -90,12 +148,15 @@
     width: 100vw;
 
     &__details {
+      text-align: left;
+    }
+
+    &__title {
       text-align: center;
     }
 
     &__content {
       display: flex;
-      align-items: center;
       padding: 32px 0px;
     }
 
